--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - "2.7"
-install: "pip install -e ."
+install: "pip install -r requirements.txt"
 script:
     - py.test test/unit/ -s -v
     - py.test test/integration/test_logcontains.py -s -v --rule=test/integration/LOGCONTAINSFIXTURE.yaml
