--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,16 @@ language: python
 python:
   - "2.7"
   - "3.7"
-install: "pip install -r requirements.txt"
+install:
+  - pip install -r requirements.txt
+  - pip install pytest-codestyle || true
 script:
-    - py.test test/unit/ -s -v
-    - py.test test/integration/test_logcontains.py -s -v --rule=test/integration/LOGCONTAINSFIXTURE.yaml
-    - py.test test/integration/test_nologcontains.py -s -v --rule=test/integration/NOLOGCONTAINSFIXTURE.yaml
-    - py.test test/integration/test_htmlcontains.py -s -v --rule=test/integration/HTMLCONTAINSFIXTURE.yaml
-    - py.test test/integration/test_http.py -s -v
-    - py.test test/integration/test_cookie.py -s -v --rule=test/integration/COOKIEFIXTURE.yaml
-    - py.test test/integration/test_multipart.py -s -v --rule=test/integration/MULTIPART.yaml
-    - py.test test/integration/test_expecterror.py -s -v --rule=test/integration/EXPECTERRORFIXTURE.yaml
+  - py.test test/unit
+  - py.test test/integration/test_logcontains.py --rule=test/integration/LOGCONTAINSFIXTURE.yaml
+  - py.test test/integration/test_nologcontains.py --rule=test/integration/NOLOGCONTAINSFIXTURE.yaml
+  - py.test test/integration/test_htmlcontains.py --rule=test/integration/HTMLCONTAINSFIXTURE.yaml
+  - py.test test/integration/test_http.py
+  - py.test test/integration/test_cookie.py --rule=test/integration/COOKIEFIXTURE.yaml
+  - py.test test/integration/test_multipart.py --rule=test/integration/MULTIPART.yaml
+  - py.test test/integration/test_expecterror.py --rule=test/integration/EXPECTERRORFIXTURE.yaml
+  - py.test --codestyle ftw || true
