--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install pytest-codestyle || true
+  - pip install pytest-flakes
   - python setup.py install
 script:
   - py.test test/unit
@@ -16,3 +17,4 @@ script:
   - py.test test/integration/test_multipart.py --rule=test/integration/MULTIPART.yaml
   - py.test test/integration/test_expecterror.py --rule=test/integration/EXPECTERRORFIXTURE.yaml
   - py.test --codestyle ftw || true
+  - py.test --flakes ftw
