Fix loading issue with python 3
Open the yaml files using utf-8 encoding.  Switch to io.open() so
it also works with python 2.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ script:
   - py.test test/integration/test_cookie.py --rule=test/integration/COOKIEFIXTURE.yaml
   - py.test test/integration/test_runner.py --rule=test/integration/MULTIPART.yaml
   - py.test test/integration/test_runner.py --rule=test/integration/EXPECTERRORFIXTURE.yaml
+  - py.test test/integration/test_runner.py --rule=test/integration/BASICFIXTURE.yaml
   - py.test --pycodestyle ftw || true
   - py.test --flakes ftw
