--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Brotli==1.0.7
-IPy==0.83
-PyYAML==4.2b1
-pytest==4.6
-python-dateutil==2.6.0
-six==1.14.0
+Brotli==1.0.9
+IPy==1.00
+PyYAML==5.3.1
+pytest==6.1.2
+python-dateutil==2.8.1
