fix(ci): use py3 only
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ '2.x', '3.x' ]
+        python-version: [ '3.x' ]
 
     steps:
       - name: Checkout repo
