--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Install requirements
         run: |
           python -m pip install -r requirements.txt
-          python -m pip install pytest-pycodestyle || true
-          python -m pip install pytest-flakes
           python setup.py install
       - name: Check source files
         if: matrix.python-version == '3.9'
         run: |
+          python -m pip install pytest-pycodestyle
+          python -m pip install pytest-flakes
           py.test --pycodestyle ftw
           py.test --flakes ftw
       - name: Run tests
